--- a/styles.css
+++ b/styles.css
@@ -13,20 +13,6 @@ body {
 }
 
 
-.backgroundSombreR {
-  background-color: #a7000021;
-  z-index: 5;
-}
-
-.backgroundSombreG {
-  background-color: #00a71621;
-  z-index: 1;
-}
-
-.backgroundSombreB {
-  background-color: #1100a721;
-  z-index: 1;
-}
 
 @keyframes backgroundDefilement {
   from {
@@ -166,14 +152,6 @@ h2 {
   margin-bottom: 20px;
 }
 
-.titreSectionEclipse {
-  background-color: rgb(240, 151, 151);
-  border: 3px solid black;
-  text-align: center;
-  box-shadow: -10px -1px 0 1px black;
-  margin-bottom: 20px;
-  width: 90%;
-}
 
 .projets {
   text-align: center;
@@ -181,7 +159,38 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgba(184, 184, 184, 0.699);
+  width: 90%;
+  margin: 0 auto 20px auto;
+  border: 3px solid black;
+  box-shadow: -10px -1px 0 1px black;
 }
+
+
+.miniGalerieProjets {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px;
+}
+
+.galerieImg {
+  width: 30%;
+  height: auto;
+  background-color: red;
+  border: 6px solid black;
+}
+
+
+.titreSectionEclipse {
+  background-color: rgb(240, 151, 151);
+  border: 3px solid black;
+  text-align: center;
+  box-shadow: -10px -1px 0 1px black;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
 
 .titreSectionBandit {
   background-color: rgb(151, 240, 155);
@@ -189,7 +198,7 @@ h2 {
   text-align: center;
   box-shadow: -10px -1px 0 1px black;
   margin-bottom: 20px;
-  width: 90%;
+  width: 100%;
 }
 
 .titreSectionMachine {
@@ -198,7 +207,7 @@ h2 {
   text-align: center;
   box-shadow: -10px -1px 0 1px black;
   margin-bottom: 20px;
-  width: 90%;
+  width: 100%;
 }
 
 .titreSectionProf {
@@ -207,7 +216,7 @@ h2 {
   text-align: center;
   box-shadow: -10px -1px 0 1px black;
   margin-bottom: 20px;
-  width: 90%;
+  width: 100%;
 }
 
 
@@ -330,6 +339,13 @@ h2 {
   margin: 20px;
 }
 
+.blocMessage2 {
+  width: 100%;
+  border: 4px solid #000000;
+  color: white;
+  background-color: rgb(46, 46, 46);
+}
+
 .blocMessageProjet {
   max-width: 800px;
   max-height: 500px;
@@ -440,21 +456,21 @@ h2 {
     align-items: stretch;
   }
 
-.background1 {
-  transition: opacity 0.5s ease;
-}
+  .background1 {
+    transition: opacity 0.5s ease;
+  }
 
-.background2 {
-  transition: opacity 0.5s ease;
-}
+  .background2 {
+    transition: opacity 0.5s ease;
+  }
 
-.background3 {
-  transition: opacity 0.5s ease;
-}
+  .background3 {
+    transition: opacity 0.5s ease;
+  }
 
-.background4 {
-  transition: opacity 0.5s ease;
-}
+  .background4 {
+    transition: opacity 0.5s ease;
+  }
 
 
 
@@ -472,6 +488,7 @@ body.dark .blocMessage {
   box-shadow: -7px -6px 0 1px white;
   border: 3px solid white;
 }
+
 
 body.dark .blocMessageProjet {
   background-color: #222;
@@ -492,6 +509,8 @@ body.dark .titreSection {
   border: 3px solid white;
 }
 
+
+
 body.dark .blocMaPhoto {
   aspect-ratio: 1/1.5;
   max-width: 300px;
@@ -499,3 +518,4 @@ body.dark .blocMaPhoto {
   box-shadow: -7px -6px 0 1px white;
   border: 3px solid white;
 }
+
