--- a/styles.css
+++ b/styles.css
@@ -380,6 +380,7 @@ h4 {
   border: 4px solid #000000;
   color: white;
   background-color: rgb(46, 46, 46);
+  text-align: center;
 }
 
 .blocMessageProjet {
